--- a/VolumeBalancer/MainForm.resx
+++ b/VolumeBalancer/MainForm.resx
@@ -117,4 +117,26 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAAAACAAEAAQC6AwAAFgAAAIlQTkcNChoKAAAADUlIRFIAAAEAAAABAAgGAAAAXHKoZgAAA4FJ
+        REFUeJzt3UGKw0AMAMF48f+/7P1DNKCYrroHixwaXSxfn33P8vOv5edP+f9m0v/f3+bDgV0CAGECAGEC
+        AGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGEC
+        AGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGECAGEC
+        AGECAGECAGECAGH39gCMXdsD8F42AAgTAAgTAAgTAAgTAAgTAAgTAAgTAAgTAAgTAAgTAAgTAAgTAAgT
+        AAgTAAhzD2Dfsz3AMvcMFtkAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwA
+        IEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwA
+        IEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIOzeHoDPNfz9c2SK703nZ5ENAMIEAMIE
+        AMIEAMIEAMIEAMIEAMIEAMIEAMIEAMIEAMIEAMIEAMIEAMIEAMJ+4R6A98lhiQ0AwgQAwgQAwgQAwgQA
+        wgQAwgQAwgQAwgQAwgQAwgQAwgQAwgQAwgQAwgQAwk7cA9j+Pv029wx4LRsAhAkAhAkAhAkAhAkAhAkA
+        hAkAhAkAhAkAhAkAhAkAhAkAhAkAhAkAhAkAhJ24BwBvlr7nYAOAMAGAMAGAMAGAMAGAMAGAMAGAMAGA
+        MAGAMAGAMAGAMAGAMAGAMAGAMAGAMPcAeLtne4Blo3sGNgAIEwAIEwAIEwAIEwAIEwAIEwAIEwAIEwAI
+        EwAIEwAIEwAIEwAIEwAIEwAIO3EPYPp99e33udPfh6fNBgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBh
+        AgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBhAgBh
+        AgBhAgBh9/YAMHQNf/8cmeJ70/lHbAAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQ
+        JgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQJgAQ9g9MoAsY
+        O9JU9gAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
