--- a/VolumeBalancer/Properties/Resources.resx
+++ b/VolumeBalancer/Properties/Resources.resx
@@ -118,16 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="iconBlack" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconBlack.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconBlue" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconBlue.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconGrey" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconGrey.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="iconWhite" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\iconWhite.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="icon_128" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\iconBlack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
